[package]
name = "grounding"
version = "1.0.0"
authors = ["Roland Kaminski <kaminski@cs.uni-potsdam.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0"
lalrpop-util = "0"
regex = "1"
clap = "2"

[build-dependencies]
petgraph = "0"
lalrpop = "0"
clap = "2"
